--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,12 @@ jobs:
           ocaml-compiler: "5.3.0"
           dune-cache: true
           opam-depext-flags: --with-test
-      
+
+      - name: Install cmark-gfm 
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y libcmark-gfm-dev
+
       - name: Install dependencies
         run: |
           opam update
