--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,13 +35,11 @@ jobs:
       - name: Install dependencies
         run: |
           opam update
-          # FORCE 2.5.0 FIRST — THIS IS CRITICAL
-          opam install yocaml_markdown.2.5.0 --yes
-          # Now install the rest (will respect joy_blog.opam)
-          opam install yocaml yocaml_unix yocaml_yaml yocaml_jingoo yocaml_syndication --yes
-          opam install hilite --yes
+          opam pin add hilite.dev git+https://github.com/patricoferris/hilite.git --yes
+          opam install yocaml.2.5.0 yocaml_markdown.2.5.0 yocaml_unix.2.5.0 yocaml_yaml.2.5.0 yocaml_jingoo.2.5.0 yocaml_syndication.2.0.0 --yes
           opam install . --deps-only --with-doc --with-test --yes
           eval $(opam env)
+
       
       - name: Build site
         run: |
