--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Setup OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.3.0"
+          ocaml-compiler: "5.2.1"
           dune-cache: true
-          opam-depext-flags: --with-test
+
 
       - name: Install cmark-gfm 
         run: |
@@ -36,9 +36,10 @@ jobs:
         run: |
           opam update
           opam pin add hilite.dev git+https://github.com/patricoferris/hilite.git --yes
-          opam install yocaml.2.5.0 yocaml_markdown.2.5.0 yocaml_unix.2.5.0 yocaml_yaml.2.5.0 yocaml_jingoo.2.5.0 yocaml_syndication.2.0.0 --yes
+          opam install yocaml.2.5.0 yocaml_markdown.2.5.0 yocaml_unix.2.5.0 yocaml_yaml.2.5.0 yocaml_jingoo.2.5.0 --yes
           opam install . --deps-only --with-doc --with-test --yes
           eval $(opam env)
+
 
       
       - name: Build site
