--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Setup OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.2.1"
+          ocaml-compiler: "5.3.0"
           dune-cache: true
-
+          opam-depext-flags: --with-test
 
       - name: Install cmark-gfm 
         run: |
@@ -40,8 +40,6 @@ jobs:
           opam install . --deps-only --with-doc --with-test --yes
           eval $(opam env)
 
-
-      
       - name: Build site
         run: |
           eval $(opam env)
