--- a/joy_blog.opam
+++ b/joy_blog.opam
@@ -3,6 +3,11 @@ opam-version: "2.0"
 version: "3ff454a-dirty"
 synopsis: "Joy's Beautiful Apple-themed Blog"
 description: "A static blog generated with YOCaml"
+maintainer: "Your Name <joy.gold13@gmail.com>"
+authors: "Joy Aruku"
+homepage: "https://github.com/Dev-JoyA/yocaml_blog"
+bug-reports: "https://github.com/Dev-JoyA/yocaml_blog/issues"
+license: "MIT"
 depends: [
   "dune" {>= "3.0"}
   "ocaml" {>= "5.3.0"}
